# bibdeskparser

./: .travis.yml  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.txt  COPYING  HISTORY.md  LICENSE  Makefile  README.md  README.rst  authors.html  bib_entry_types.html  bibdesk_format.html  changelog.html  cli.html  config.html  conftest.py  contributing.html  genindex.html  howto.html  preprints.html  py-modindex.html  pyproject.toml  readme.html  search.html  setup.py  specifiers.html  tox.ini  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
.travis/: docs.sh  docs_post_process.py  versions.py
docs/: Makefile  doctr_deploy_key.enc
docs/source/: bibdeskparser.rst  conf.py  index.rst  logging.rst  tutorial.rst
docs/sources/: apidoc_renderer.py  bibdesk_format.md  cli.md  conf.py  config.md  conftest.py  howto.md  index.md  preprints.md  readme.md  specifiers.md
master/: .buildinfo  .doctr-files  authors.html  bib_entry_types.html  bibdesk_format.html  bibdeskparser.html  bibtex_conv.html  changelog.html  cli.html  config.html  contributing.html  genindex.html  history.html  howto.html  index.html  install.html  logging.html  objects.inv  preprints.html  py-modindex.html  readme.html  search.html  searchindex.js  specifiers.html  tutorial.html
master/.doctrees/: bib_entry_types.doctree  bibdesk_format.doctree  changelog.doctree  cli.doctree  config.doctree  contributing.doctree  environment.pickle  howto.doctree  index.doctree  preprints.doctree  readme.doctree  specifiers.doctree
master/_modules/: bibdeskparser.html  index.html  pyparsing.html
master/_sources/: bibdesk_format.md.txt  bibdeskparser.rst.txt  cli.md.txt  config.md.txt  history.md.txt  howto.md.txt  install.rst.txt
master/_static/: documentation_options.js
master/download/: BibDeskParser.epub
scripts/: README.md  check_changelog.py  release.py
src/: conftest.py
src/bibdeskparser/: __init__.py  abstracts.py  abstracttext.py  bdskfile.py  bibdatabase.py  bibtexexpression.py  bparser.py  bwriter.py  checks.py  cli.py  config.py  customization.py  dois.py  editing.py  entry.py  entrytypes.py  exporting.py  fetch.py  groups.py  header.py  identifiers.py  importing.py  latexenc.py  library.py  macros.py  names.py  (+7 more)
tests/: test_abstracts.py  test_abstracttext.py  test_bdskfile.py  test_bibdatabase.py  test_bibdeskparser.py  test_bibtex_strings.py  test_bibtexexpression.py  test_bibtexparser.py  test_bibtexwriter.py  test_bparser.py  test_bwriter.py  test_cli.py  test_comments.py  test_config.py  test_crossref_resolving.py  test_customization.py  test_doc_console.py  test_docstrings.py  test_dois.py  test_editing.py  test_entry.py  test_exporting.py  test_fetch.py  test_groups.py  test_header.py  test_homogenise_fields.py  test_identifiers.py  test_importing.py  test_latexenc.py  test_library.py  test_macros.py  test_middleware.py  test_names.py  test_preambles.py  test_preprints.py  test_render.py  test_smart_groups.py  test_specifiers.py  test_splitname.py  test_texmap.py  (+1 more)
v0.1.0/: .buildinfo  authors.html  contributing.html  py-modindex.html  readme.html  search.html
v0.2.0/: authors.html  cli.html  config.html  genindex.html  howto.html  index.html  py-modindex.html
v0.2.1/: .buildinfo  authors.html  bib_entry_types.html  changelog.html  cli.html  config.html  index.html  readme.html  search.html  specifiers.html
v0.3.0/: config.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  specifiers.html
v0.4.0/: bib_entry_types.html  cli.html  config.html  contributing.html  genindex.html  preprints.html  readme.html  search.html
v0.5.0/: .buildinfo  authors.html  changelog.html  cli.html  config.html  contributing.html  index.html  py-modindex.html  search.html
(+86 files in other folders)
