[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[project]
name = "bibdeskparser"
version = "0.5.0"
description = "Parser for Bibdesk database files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT license" }
authors = [
    { name = "Michael Goerz", email = "mail@michaelgoerz.net" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "arxiv>=2.1",
    "bibtexparser==2.0.0b9",
    "click>=8",
    "habanero>=2.2",
    "httpx[socks]>=0.27.2",
    "pylatexenc>=2.10",
    "pysocks>=1.5.6",
    "tomli>=1.1.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
bibdeskparser = "bibdeskparser.cli:main"

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=8; sys_platform == 'darwin'"]

[project.urls]
Homepage = "https://github.com/goerz/bibdeskparser"

[dependency-groups]
dev = [
    "pytest>=7.2",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    "packaging>=21",
    "coverage>=7",
    "coveralls>=3",
    "ipdb>=0.13",
    "ipython>=8",
]
docs = [
    "sphinx>=7",
    "sphinx_rtd_theme>=2",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.2",
    "myst-parser>=2",
    "docs-versions-menu>=0.6",
    "gitpython>=3",
    "sphinx-autodoc2>=0.5",
]
lint = [
    "black>=24",
    "isort>=5",
    "flake8>=6",
    "flake8-pyproject>=1",
    "pylint>=3",
    "pre-commit>=3.5",
]
release = [
    "click>=8",
    "gitpython>=3",
    "packaging>=21",
    "pytest>=7.2",
]

[tool.black]
line-length = 79

[tool.isort]
known_first_party = ["bibdeskparser"]
force_single_line = false
lines_after_imports = -1
line_length = 79
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["src/*/__init__.py"]

[tool.flake8]
exclude = ["docs"]
max-line-length = 79
extend-ignore = [
    # See https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
    # don't care about "ambiguous variable names"
    "E741",
    # when I use lambdas, I know what I'm doing
    "E731",
]

[tool.pytest.ini_options]
# tests/Refs contains test data and standalone helper scripts, not tests
addopts = "-ra --ignore=tests/Refs"

[tool.coverage.run]
relative_files = true
source = ["bibdeskparser"]

[tool.pylint."messages control"]
disable = [
    "invalid-name",
    "unidiomatic-typecheck",
    "consider-iterating-dictionary",
    "consider-using-enumerate",
    "too-many-lines",
    "multiple-statements",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring",
    "len-as-condition",
    "import-error",
    "too-many-function-args",
    "assignment-from-none",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-boolean-expressions",
    "too-many-nested-blocks",
    "exec-used",
    "eval-used",
    "using-constant-test",
    "protected-access",
    "global-statement",
    "unused-argument",
    "no-else-return",
    "ungrouped-imports",
    "unnecessary-lambda",
]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 10
max-branches = 20
max-locals = 30
max-returns = 10
max-statements = 200
max-public-methods = 40
